[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agent_fence"
version = "0.1.0"
description = "Lightweight Python library and CLI tool that wraps AI agent execution environments with configurable permission boundaries, rate limits, and action whitelists."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ai", "agent", "sandbox", "security", "policy", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.scripts]
agent_fence = "agent_fence.cli:main"

[project.urls]
Homepage = "https://github.com/example/agent_fence"
Repository = "https://github.com/example/agent_fence"
Issues = "https://github.com/example/agent_fence/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_fence*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
